Changelog
=========

1.6 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~


1.5 (xx.xx.xxxx)
~~~~~~~~~~~~~~~~

 * Added wagtail.contrib.modeladmin, an app for configuring arbitrary Django models to be edited through the Wagtail admin (Andy Babic)
 * Added TableBlock, a StreamField block for table-based content (Moritz Pfeiffer, David Seddon, Brad Busenius)
 * The "dynamic serve view" for images has been greatly improved. See release notes for details
 * Moved lesser-user actions in the page explorer into a 'More' dropdown
 * Added a hook `register_page_listing_buttons` for adding action buttons to the page explorer
 * Added the ability to edit existing links in the rich text editor (Loic Teixeira)
 * Rich text fields now show link destinations as tooltips (Loic Teixeira)
 * Password reset email now reminds the user of their username (Matt Westcott)
 * Added 'revisions' action to pages list (Roel Bruggink)
 * Added jinja2 support for the  ``settings`` template tag (Tim Heap)
 * Added a hook `insert_global_admin_js` for inserting custom JavaScript throughout the admin backend (Tom Dyson)
 * Recognise instagram embed URLs with `www` prefix (Matt Westcott)
 * The type of the ``search_fields`` attribute on ``Page`` models (and other searchable models) has changed from a tuple to a list (Tim Heap)
 * Use `PasswordChangeForm` when user changes their password, requiring the user to enter their current password (Matthijs Melissen)
 * Highlight current day in date picker (Jonas Lergell)
 * Eliminated the deprecated `register.assignment_tag` on Django 1.9 (Josh Schneier)
 * Increased size of Save button on site settings (Liam Brenner)
 * Optimised Site.find_for_request to only perform one database query (Matthew Downey)
 * Notification messages on creating / editing sites now include the site name if specified (Chris Rogers)
 * Added `--schema-only` option to `update_index` management command
 * Added meaningful default icons to `StreamField` blocks (Benjamin Bach)